--- a/index.html
+++ b/index.html
@@ -351,12 +351,8 @@
             
             <div class="hero-form">
                 <h3 class="form-title">Get Instant Access</h3>
-                <form id="course-signup">
-                    <div class="form-group">
-                        <input type="email" class="form-input" placeholder="Best Email" required>
-                    </div>
-                    <button type="submit" class="submit-button">Send Me The Course</button>
-                </form>
+                <!-- ConvertKit Form -->
+                <script async data-uid="8662fda63f" src="https://visionghostwriting.kit.com/8662fda63f/index.js"></script>
                 <p class="guarantee">✓ Free 5-day course delivered straight to your inbox</p>
             </div>
         </div>
